fix: image taking up too much vertical height in desktop view

--- a/hangman/src/App.css
+++ b/hangman/src/App.css
@@ -90,6 +90,7 @@ html {
   align-items: center;
   flex-grow: 1;
   max-width: 70%;
+  max-height: 70vh;
   height: auto;
   margin: 0 auto;
   z-index: -2;
